# penguin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
projects/hello_shared/: CMakeLists.txt  hello_shared.cpp  hello_shared.h  hello_shared_dll.h
projects/penguin/: CMakeLists.txt
projects/penguin/penguin/: penguin.c  penguin.h  penguin_data.h  penguin_dll.h  penguin_linux.c  penguin_linux.h  penguin_status.h  penguin_windows.c  penguin_windows.h
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/penguin_test/: CMakeLists.txt  main.cpp
